--- a/mensformal.html
+++ b/mensformal.html
@@ -25,6 +25,7 @@
             <li><a href="categories.html">CATEGORIES</a></li>
             <li><a href="contact.html">CONTACT US</a></li>
 	          <li><a href="add_to_cart.html">CART</a></li>
+            <li><a href="about.html">ABOUT US</a></li>
           </ul>
       </div>
    </nav>
