Fixed css alignment

--- a/main.html
+++ b/main.html
@@ -118,7 +118,7 @@
     <div class="box">
       <h3>Pale T-Shirt</h3>
       <img src="images/14.png" width="100%" height="500">
-      <p>Type: outfitters casuals.<br>Features: Tough and durable, summer friendly .<p>
+      <p>Features: Tough and durable, summer friendly .<p>
       <button class="button"><a href="add_to_cart.html" style="color:white">ADD TO CART</a></button>
     </div>
   </section>
@@ -186,7 +186,7 @@
     <div class="box">
       <h3>Animated jet shirt</h3>
       <img src="images/32.png" width="100%">
-      <p><br>Features: Dog logo, comfortable and warm.<p>
+      <p>Features: Dog logo, comfortable, sturdy and warm.<p>
       <button class="button"><a href="add_to_cart.html" style="color:white">ADD TO CART</a></button>
     </div>
   </section>
