--- a/menswear.html
+++ b/menswear.html
@@ -63,7 +63,7 @@
     <div class="box">
       <h3>Pale T-Shirt</h3>
       <img src="images/14.png" width="100%" height="500">
-      <p>Type: outfitters casuals.<br>Features: Tough and durable, summer friendly .<p>
+      <p>Features: Tough and durable, summer friendly .<p>
       <button class="button"><a href="add_to_cart.html" style="color:white">ADD TO CART</a></button>
     </div>
   </section>
