Added Fluid Containers

--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -11,7 +11,7 @@
     <title>My store</title>
 </head>
 <body>
-        
+<div class="container-fuild"> 
 <div class="background">
   <section>
      <div class="header">
@@ -381,5 +381,6 @@
       </div>
       </div>
     </footer>
+  </div>
   </body>
 </html>
