--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>About Us | Gracious Garments</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-
+<div class="container-fuild">
    <header>
      <div class="header">
         <img src="images/logo.png">
@@ -95,6 +95,6 @@
       </div>
       </div>
     </footer>
-
+</div>
 </body>
 </html>
