--- a/add_to_cart.html
+++ b/add_to_cart.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Shopping Cart</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -10,6 +11,7 @@
 </head>
 
 <body>
+<div class="container-fuild">
  <header>
      <div class="header">
         <img src="images/logo.png">
@@ -26,8 +28,8 @@
             <li><a href="about.html">ABOUT US</a></li>
           </ul>
       </div>
-   </nav>
-    </header>
+   </nav> 
+    </header><br>
   <main>
     
    <div class="container mt-5">
@@ -123,8 +125,6 @@
       </div>
       </div>
     </footer>
-
+</div>
 </body>
-
-
 </html>
