--- a/categories.html
+++ b/categories.html
@@ -3,13 +3,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="main.css">
     <title>Categories</title>
 </head>
-        <body>
+<body>
+<div class="container-fuild">
         
 <div class="background">
   <section>
@@ -34,14 +35,14 @@
     <div class="box">
        <h3>MEN's WEAR</h3>
        <img src="images/35.png" width="100%">
-       <p>Got a ton of men wear right here.<p>
+       <p>Got a ton of men wear right here.<p><br>
        <button class="button"><a href="menswear.html" style="color:white">CHECKOUT</a></button>
     </div>
 
     <div class="box">
       <h3>WOMEN's WEAR</h3>
       <img src="images/34.png" width="100%">
-      <p>A variety of wear's here ladies.<p>
+      <p>A variety of wear's here ladies.<p><br>
       <button class="button"><a href="womenswear.html" style="color:white">CHECKOUT</a></button>
     </div>
 
@@ -108,5 +109,6 @@
       </div>
       </div>
     </footer>
+</div>
 </body>
 </html>
