--- a/menswear.html
+++ b/menswear.html
@@ -3,13 +3,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="main.css">
     <title>CONTACT</title>
 </head>
-        <body>
+<body>
+<div class="container-fuild">
         
 <div class="background">
   <section>
@@ -87,5 +88,6 @@
       </div>
       </div>
     </footer>
-    </body>
+</div>
+</body>
 </html>
