--- a/top_sellers.html
+++ b/top_sellers.html
@@ -3,12 +3,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="main.css">
     <title>top_sellers</title>
 </head>
+<body>
+<div class="container-fuild">
 <section>
      <div class="header">
         <img src="images/logo.png">
@@ -133,6 +135,6 @@
       </div>
       </div>
     </footer>
-          
-          </body>
-          </html>
+</div>    
+</body>
+</html>
