--- a/categories.html
+++ b/categories.html
@@ -64,28 +64,28 @@
     <div class="box box1">
        <h3>MEN-CASUALS</h3>
        <img src="images/39.jpeg" width="90%" height="750">
-       <p>Here are some simple comfy ones guys. Perfect for wearing casually.<p>
+       <p>Here are some simple comfy ones guys. Perfect for wearing casually.<p><br>
        <button class="button"><a href="menscasual.html" style="color:white">CHECKOUT</a></button>
     </div>
 
     <div class="box">
       <h3>WOMEN-FORMALS</h3>
       <img src="images/41.jpeg" width="100%" height="700">
-      <p>If you want formals ladies, Find em here quicker.<p>
+      <p>If you want formals ladies, Find em here quicker.<p><br>
       <button class="button"><a href="womensformal.html" style="color:white">CHECKOUT</a></button>
     </div>
 
     <div class="box">
       <h3>WOMEN-CASUALS</h3>
       <img src="images/40.jpeg" width="90%" height="750">
-      <p>If you need casuals ladies, we've got you covered as well.<p>
+      <p>If you need casuals ladies, we've got you covered as well.<p><br>
       <button class="button"><a href="womenscasual.html" style="color:white">CHECKOUT</a></button>
     </div>   
    
     <div class="box">
       <h3>PANTS</h3>
       <img src="images/55.jpeg" width="80%">
-      <p>Looking for pants? You've come to the right place!.<p>
+      <p>Looking for pants? You've come to the right place!.<p><br>
       <button class="button"><a href="pants.html" style="color:white">CHECKOUT</a></button>
     </div>
   </section>
