--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
 <section class="contact-section">
 <div class="contact">
-<iframe class="map-container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.158191605657!2d67.09270607482864!3d24.926680342605664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb338caa5ac57cb%3A0x2c4b1fc512ab6bb!2sAptech%20Gulshan-e-Iqbal!5e0!3m2!1sen!2s!4v1755899605972!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe class="map-container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.158191605657!2d67.09270607482864!3d24.926680342605664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb338caa5ac57cb%3A0x2c4b1fc512ab6bb!2sAptech%20Gulshan-e-Iqbal!5e0!3m2!1sen!2s!4v1755899605972!5m2!1sen!2s" style="border:0; width:100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br>
 
 <div class="contact-form">
     <h2>Contact Us</h2>
@@ -51,7 +51,7 @@
       <button type="submit">Send Message</button>
     </form>
   </div>
-</div>
+</div><br>
 </section>
     <footer>
       <div class="footer-content">
