--- a/categories.html
+++ b/categories.html
@@ -71,7 +71,7 @@
     <div class="box">
       <h3>WOMEN-FORMALS</h3>
       <img src="images/41.jpeg" width="100%" height="700">
-      <p>If you want formals ladies, Find em here quicker.<p><br>
+      <p>If you want formals ladies, Find em here quicker.<p><br><br>
       <button class="button"><a href="womensformal.html" style="color:white">CHECKOUT</a></button>
     </div>
 
@@ -85,7 +85,7 @@
     <div class="box">
       <h3>PANTS</h3>
       <img src="images/55.jpeg" width="80%">
-      <p>Looking for pants? You've come to the right place!.<p><br>
+      <p>Looking for pants? You've come to the right place!.<p><br><br>
       <button class="button"><a href="pants.html" style="color:white">CHECKOUT</a></button>
     </div>
   </section>
