--- a/womenscasual.html
+++ b/womenscasual.html
@@ -19,17 +19,17 @@
         <p>NEW DESIGNS BY GRACIOUS GARMENTS</p>  
      </div>
   <nav>
-       <div class="menubuttons">
-          <ul>
-            <li class="main"><a href="main.html">HOMEPAGE</a></li>
-            <li><a href="top_sellers.html">TOP SELLERS</a></li>
-            <li><a href="categories.html">CATEGORIES</a></li>
-            <li><a href="contact.html">CONTACT US</a></li>
-	          <li><a href="add_to_cart.html">CART</a></li>
-            <li><a href="about.html">ABOUT US</a></li>
-          </ul>
-      </div>
-   </nav>
+  <div class="menubuttons">
+    <ul>
+      <li><a href="main.html">HOMEPAGE</a></li>
+      <li><a href="top_sellers.html">TOP SELLERS</a></li>
+      <li><a href="categories.html">CATEGORIES</a></li>
+      <li><a href="contact.html">CONTACT US</a></li>
+      <li><a href="add_to_cart.html">CART</a></li>
+      <li><a href="about.html">ABOUT US</a></li>
+    </ul>
+  </div>
+</nav>
     </header>
 
 <h2 style="text-align: center; text-decoration: underline;" >WOMEN-CASUALS </h2>
